syntax = "proto3";

package notificaion;

message Notification {
  string id = 1;
  string user_id = 2;
  string type = 3;
  string message = 4;
  string status = 5;
  string created_at = 6;
}

message SendNotificationRequest {
  string user_id = 1;
  string type = 2;
  string message = 3;
}

message SendNotificationResponse {
  Notification notification = 1;
}

service NotificationService {
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
}